Fixed Github link

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <ul class="no-bullet">
                 <li class="fi-mail"> kristapsaaa@gmail.com</li>
                 <li class="fi-social-linkedin"><a href="http://uk.linkedin.com/in/kristapsauzins" target="_blank"> uk.linkedin.com/in/kristapsauzins</a></li>
-                <li><a href="https://github.com/KrisAuz/web" target="_blank"> This page on GitHub</a></li>
+                <li><a href="https://github.com/KrisAuz/KrisAuz.github.io" target="_blank"> This page on GitHub</a></li>
                 <hr/>
               <h1 style="font-size:200%">Download my CV:</h1>
                 <li style="font-size:150%"><a href="#" onclick="window.open('files/kristaps_auzins_CV.doc')"><i class="fi-arrow-down"></i>  .doc</a></li>
