--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
   <div class="off-canvas-wrap" data-offcanvas>
     <div class="inner-wrap">
      <a class="left-off-canvas-toggle fi-list-bullet" href="#">Menu</a>
-
+<!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
+<script type="text/javascript">
+    window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Accept","learnMore":"More info","link":null,"theme":"dark-top"};
+</script>
       <!-- Off Canvas Menu -->
       <aside class="left-off-canvas-menu">
         <ul class="off-canvas-list">
