--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
     </script>
     <link href='http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css' rel='stylesheet' type='text/css'>
 <!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
-	<script type="text/javascript">
-    window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Accept","learnMore":"More info","https://en.wikipedia.org/wiki/HTTP_cookie":null,"theme":"dark-top"};
-	</script>
+<script type="text/javascript">
+    window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Accept","learnMore":"More info","link":"https://en.wikipedia.org/wiki/HTTP_cookie","theme":"dark-top"};
+</script>
 
-	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.9/cookieconsent.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.9/cookieconsent.min.js"></script>
 <!-- End Cookie Consent plugin -->
+
  </head>
 
 
