--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
    </div>
 </div>
     <div class="footer">
+      <hr id="footer"/>
         <center>© Kristaps Auzins 2015<p>
          
         </center>
