Home button code change
Home button was redirecting to a index.php instead of index.html causing
404 error.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <aside class="left-off-canvas-menu">
         <ul class="off-canvas-list">
           <li>
-            <a href="index.php"><i class="fi-home"></i> Home</a>
+            <a href="index.html"><i class="fi-home"></i> Home</a>
           </li>
           <li>
             <a href="#"><i class="fi-social-blogger"></i> Blog (coming later...)</a>
