--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </ul>
       </aside>
     <div class="intro-text">
-          </br>My name is Kristaps Auzins, I do things, and stuff...
+          </br>"I have an approximate knowledge of many things" - / Demon Cat /
           <p style="fornt-size:50%">scroll down to read about me</p>
 
       <div class="bounce">
