--- a/ugis.html
+++ b/ugis.html
@@ -1,3 +1,20 @@
-<div>
-<img src="http://i.imgur.com/UpcYLkC.gif"/>
-</div>
+<style>
+#video-bg {
+position: fixed;
+right: 0;
+bottom: 0;
+width: auto;
+min-width: 100%;
+height: auto;
+min-height: 100%;
+z-index: -100;
+background: transparent url(video-bg.jpg) no-repeat;
+background-size: cover;
+}
+</style>
+
+<video autoplay loop muted poster="vid-first-frame.jpg" id="video-bg">
+ 
+<source src="http://i.imgur.com/UpcYLkC.mp4" type="video/mp4">
+ 
+</video>
