--- a/ugis.html
+++ b/ugis.html
@@ -1,3 +1,21 @@
+<!doctype html>
+<html class="no-js" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Kristaps Auzins - web developer, technology enthusiast. This is my about/CV page. Blog/portfolio coming in the furure.">
+    <meta name="keywords" content="Kristaps Auzins, web development, technology, HTML, CSS, JavaScript">
+    <meta name="author" content="Kristaps Auzins">
+    <title> Kristaps Auzins | Welcome</title>
+    <link rel="stylesheet" href="css/foundation.min.css" />
+    <script src="js/vendor/modernizr.js"></script>
+    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/foundation-icons/foundation-icons.css" />
+    <link rel="shortcut icon" href="/img/KA.ico">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Righteous&amp;.subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href='http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css' rel='stylesheet' type='text/css'>
+
 <style>
 #video-bg {
 position: fixed;
@@ -19,3 +37,30 @@ background-size: cover;
 <source src="http://i.imgur.com/UpcYLkC.mp4" type="video/mp4">
  
 </video>
+
+<div class="footer">
+      <hr id="footer"/>
+        <center>© Kristaps Auzins 2015<p>
+         
+        </center>
+    </div>
+
+
+    <script src="js/foundation.min.js"></script>
+    
+    <script>
+        $(document).foundation();
+    </script>
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-68263195-1', 'auto');
+    ga('send', 'pageview');
+    </script>
+  </body>
+  <a class="exit-off-canvas"></a>
+  </div>
+  </div>
+</html>
