--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </ul>
       </aside>
     <div class="intro-text">
-          </br>"I have an approximate knowledge of many things" - / Demon Cat /
+          </br>"I have an approximate knowledge of many things"
           <p style="fornt-size:50%">scroll down to read about me</p>
 
       <div class="bounce">
@@ -125,7 +125,7 @@
 </div>
     <div class="footer">
       <hr id="footer"/>
-        <center>© Kristaps Auzins 2015<p>
+        <center>© Kristaps Auzins 2017<p>
          
         </center>
     </div>
