--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <i class="fi-arrow-down size-large"></i>
       </div>
     </div>
-
+/*
 <div class="middle">
     <div class="content">
       <div class="row">
@@ -112,7 +112,7 @@
         </div>
       </div>
    </div>
-</div>
+</div>*/
     <div class="footer">
       <hr id="footer"/>
         <center>© Kristaps Auzins 2017<p>
