--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="inner-wrap">
      <a class="left-off-canvas-toggle fi-list-bullet" href="#">Menu</a>
 
-      <!-- Off Canvas Menu -->
+      <!-- Off Canvas Menu
       <aside class="left-off-canvas-menu">
         <ul class="off-canvas-list">
           <li>
@@ -53,15 +53,15 @@
             <a href="#"><i class="fi-social-blogger"></i> Blog (coming later...)</a>
           </li>        
         </ul>
-      </aside>
+      </aside> -->
     <div class="intro-text">
-          </br>"I have an approximate knowledge of many things"
-          <p style="fornt-size:50%">scroll down to read about me</p>
-
+          </br>"Hi"
+          <p style="fornt-size:50%"></p>
+<!--
       <div class="bounce">
         <i class="fi-arrow-down size-large"></i>
       </div>
-    </div>
+    </div> -->
 <!--
 <div class="middle">
     <div class="content">
