--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
   <div class="off-canvas-wrap" data-offcanvas>
     <div class="inner-wrap">
-     <a class="left-off-canvas-toggle fi-list-bullet" href="#">Menu</a>
+     <!-- <a class="left-off-canvas-toggle fi-list-bullet" href="#">Menu</a> -->
 
       <!-- Off Canvas Menu
       <aside class="left-off-canvas-menu">
@@ -55,7 +55,7 @@
         </ul>
       </aside> -->
     <div class="intro-text">
-          </br>"Hi"
+          </br>Hi
           <p style="fornt-size:50%"></p>
 <!--
       <div class="bounce">
@@ -112,13 +112,13 @@
         </div>
       </div>
    </div>
-</div>-->
+</div>
     <div class="footer">
       <hr id="footer"/>
         <center>© Kristaps Auzins 2017<p>
          
         </center>
-    </div>
+    </div> -->
 
 
     <script src="js/foundation.min.js"></script>
