--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
 <body>
-  <div class="off-canvas-wrap" data-offcanvas>
+  <div class="off-canvas-wrap" data-offcanvas style="height:100%" >
     <div class="inner-wrap">
      <!-- <a class="left-off-canvas-toggle fi-list-bullet" href="#">Menu</a> -->
 
