--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <body>
   <div class="off-canvas-wrap" data-offcanvas style="height:100%" >
-    <div class="inner-wrap">
+    <div class="inner-wrap" style="height:100%">
      <!-- <a class="left-off-canvas-toggle fi-list-bullet" href="#">Menu</a> -->
 
       <!-- Off Canvas Menu
